--- a/code/index.html
+++ b/code/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
   </head>
 
   <body>
@@ -18,6 +17,7 @@
           <li>World</li>
           <li>Log In</li>
         </ul>
+        <input type="text" placeholder="Search">
       </div>
       <div class="logo-container">
         <h1 class="main-heading one">Stockholm</h1>
@@ -32,7 +32,7 @@
     <section class="big-news">
       <div class="big-news-box">
         <h2 class="big-news-title">Chemistry Nobel awarded for mirror-image molecules</h2>
-        <img class="big-news-image" "https://images.unsplash.com/photo-1576086213369-97a306d36557?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80"/>
+        <!-- <img class="big-news-image" "https://images.unsplash.com/photo-1576086213369-97a306d36557?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80"/> -->
       </div>
     </section>
 
@@ -61,20 +61,20 @@
       <!-- Sports  -->
       <section id="sports" class="news-grid">
         <div class="news-item">
-          <img class="news-item-image" src="https://images.unsplash.com/photo-1517649763962-0c623066013b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"/>
-          <h3 class="news-item-caption">Sports heading 1</h3>
+          <a target="_blank" href="https://www.bbc.com/sport/sports-personality/64027088"><img class="news-item-image" src="https://images.unsplash.com/photo-1671016233730-44258a88eb03?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1133&q=80"></a>
+          <a target="_blank" href="https://www.bbc.com/sport/sports-personality/64027088"><h3 class="news-item-caption">Lionel Messi named BBC World Sport Star of the Year</h3></a>
         </div>
         <div class="news-item">
-          <img class="news-item-image" src="https://images.unsplash.com/photo-1544298621-a28c00544483?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cm9nZXIlMjBmZWRlcmVyfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"/>
-          <h3 class="news-item-caption">Sports heading 2</h3>
+          <a target="_blank" href="https://www.bbc.com/sport/tennis/63018231"><img class="news-item-image" src="https://images.unsplash.com/photo-1544298621-a28c00544483?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cm9nZXIlMjBmZWRlcmVyfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"></a>
+          <a target="_blank" href="https://www.bbc.com/sport/tennis/63018231"><h3 class="news-item-caption">Roger Federer hopes to 'party again together' with fans after retirement</h3></a>
         </div>
         <div class="news-item">
-          <img class="news-item-image" src="https://images.unsplash.com/photo-1570621810296-d7caf9839060?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"/>
-          <h3 class="news-item-caption">Sports heading 3</h3>
+          <a target="_blank" href="https://www.bbc.com/sport/cricket/64016092"><img class="news-item-image" src="https://images.unsplash.com/photo-1624526267942-ab0ff8a3e972?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"></a>
+          <a target="_blank" href="https://www.bbc.com/sport/cricket/64016092"><h3 class="news-item-caption">Pakistan v England: Rehan Ahmed is the real deal - Jonathan Agnew</h3></a>
         </div>
         <div class="news-item">
-          <img class="news-item-image" src="https://images.unsplash.com/photo-1607962837359-5e7e89f86776?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"/>
-          <h3 class="news-item-caption">Sports heading 4</h3>
+          <a target="_blank" href="https://www.bbc.com/sport/63987137"><img class="news-item-image" src="https://images.unsplash.com/photo-1551698618-1dfe5d97d256?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"></a>
+            <a target="_blank" href="https://www.bbc.com/sport/63987137"><h3 class="news-item-caption">UN urges sports organisations to do more for sustainability</h3></a>
       </section>
 
       <!-- Tech  -->
@@ -97,7 +97,7 @@
       </section>
     </section>
 
-    <footer class ="footer">Copyright 2022 Stockholm Times</footer>
+    <footer class ="footer">Copyright 2022 Stockholm Times. Credits: News items taken from BBC.com</footer>
 
   </body>
 </html>
