First project iteration.

--- a/code/index.html
+++ b/code/index.html
@@ -4,19 +4,121 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
+    <meta name="viewport" content="width-device-width, intial-scale=1.0">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
+    <div class="header">
+      <header>
       <!-- Some kind of logo and navbar -->
+        <img src="./images/orange_wine.png" alt="logo" />
+        <h1>ORANGE WINE</h1>
+    </div>
+    <div>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#news">News</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#about">About</a></li>
+      </ul>
+    </div>
+
+
+      
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+      <div class="grid_container">
+        <div class="image">
+          <img src="./images/1.jpg" alt="big news image" class="wdn-strech rounded-corners">
+        </div>
+        <div class="text">
+          <h1>Unless you’ve been living under a rock, you’ve no doubt felt the orange wine crush.
+             For the past few years, they’ve become the darling of the wine-professional circuit, creeping onto wine menus.
+              Not quite white wine, not quite red, and somewhat akin to rose,
+             orange wine sits within its own category. And while many have been open
+             to tasting orange wine, not everyone may know exactly what it is. In 
+            short, it’s all about the skins. But, if you’re curious to know more, 
+            we’ve got a handy primer for you. </h1>
+        </div>
+      </div>
+
     </section>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
-</html>
+    <section>
+          <!-- The other news  -->
+          <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+
+          <section class="hero-section">
+            <div class="card-grid">
+              <a class="card" href="#">
+                <div class="card__background" style="background-image: url(../code/images/pexels-laura-stanley-1751537.jpg)"></div>
+                <div class="card__content">
+                  <h3 class="card__heading">How orange wine is made</h3>
+                  <p class="card__category">The simplest explanation is that orange wine is made from white grapes
+                    using the same process used to make red wine. Traditionally, white wines 
+                    are made from white grapes pressed immediately after harvest to remove the
+                     juice from the grape cluster’s skins, seeds, and stems. 
+                     This yields a clear liquid to ferment into white wine</p>
+                </div>
+              </a>
+              <a class="card" href="#">
+                <div class="card__background" style="background-image: url(../code/images/pexels-elevate-1267359.jpg)"></div>
+                <div class="card__content">
+                  <h3 class="card__heading">The history of orange wine</h3>
+                  <p class="card__category">Though orange wine has seen an epic rise in popularity in
+                    recent years, there’s nothing new about this style of wine. Its origins are ancient — as in, it’s been produced for millennia.
+                    Archeological evidence shows that it was made as far back as 6000 B.C. in what is now the modern-day country of Georgia.</p>
+                </div>
+              </a>
+              <a class="card" href="#">
+                <div class="card__background" style="background-image: url(../code/images/pexels-mister-mister-3490355.jpg)"></div>
+                <div class="card__content">
+                  <h3 class="card__heading">Orange wine worldwide</h3>
+                  <p class="card__category">But other forms were found during the Roman empire. The Romans used clay pots,
+                     or amphorae, to transport wine to regions such as Alentejo, Portugal,
+                      where the practice remains a central part of the winemaking tradition. Though much of
+                     the amphora or ”tahla” wine is red, many producers, such as Herdade do
+                      Rocim and Adega Cartuxa, also make a version of white, skin-contact wine.</p>
+                </div>
+              </li>
+              <a class="card" href="#">
+                <div class="card__background" style="background-image: url(../code/images/pexels-math-21393.jpg)"></div>
+                <div class="card__content">
+                  <h3 class="card__heading">What does orange wine taste like?</h3>
+                  <p class="card__category">Because orange wine is made using a wide range of grape varieties and at
+                     different temperatures in different climates, the diversity within this style is vast.</p>
+                </div>
+              </a>
+              <a class="card" href="#">
+                <div class="card__background" style="background-image: url(../code/images/pexels-tim-mossholder-953166.jpg)"></div>
+                <div class="card__content">
+                  <h3 class="card__heading">The best food pairings for orange wine</h3>
+                  <p class="card__category">Orange wines are typically dry with hints of tannin and a weightier mouthfeel.
+                     More robust than white wine but with less intensity than bold, tannic reds, this style is a
+                      perfect match for a variety of cuisines.</p>
+                </div>
+              </a>
+              <a class="card" href="#">
+                <div class="card__background" style="background-image: url(../code/images/pexels-tim-mossholder-2339180.jpg)"></div>
+                <div class="card__content">
+                  <h3 class="card__heading">Concept of orange wine </h3>
+                  <p class="card__category">The concept of orange wine is rooted in imparting the same structural
+                     characteristics to white wine as in red wine. To achieve this,
+                      white grape juice is left in contact with the skins during fermentation.
+                       This can last anywhere from a few days to a couple of years, depending on where it is produced.
+                        The result is a white wine with a bit more structure and complexity.</p>
+                </div>
+              </a>
+              <a class="card" href="#">
+                <div class="card__background" style="background-image: url(../code/images/wine_1.png)"></div>
+                <div class="card__content">
+                  <h3 class="card__heading">So why is it called orange wine?</h3>
+                  <p class="card__category">Contrary to what the name might infer, there aren’t actually
+                     any oranges involved in the winemaking process. The name comes instead from the slightly orange,
+                      amber, rosy color the wine takes on.</p>
+                </div>
+              </a>
+            <div>
+          </section>
