Changed names on images and in links

--- a/code/index.html
+++ b/code/index.html
@@ -28,7 +28,7 @@
       
       <!--headline post-->
     <section class="headline">
-        <div class="headline-image"><a href="#"><img src="img/minimalist-wardrobe.jpg" alt="minimalist wardrobe"></a></div>
+        <div class="headline-image"><a href="#"><img src="./img/big-img-1.jpg" alt="minimalist wardrobe"></a></div>
         <article class="main-article">
           <h1><a href="#">10 steps to the essential minimalist wardrobe</a></h1>
           <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus fugit soluta odit fuga molestias, ab doloribus rem iure dolor ratione nam modi assumenda incidunt. Aperiam consequatur cupiditate fugit veniam voluptates? Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
@@ -42,49 +42,49 @@
       <section class="news">
         <div class="container-grid">
             <div class="news-grid">
-              <div class="grid-image"><img src="./img/declutter.jpg" alt="declutter"></div>
+              <div class="grid-image"><img src="./img/img-1.jpg" alt="declutter"></div>
               <h1><a href="#">Declutter</a></h1>
               <p>Whats declutter?</p>
               <button class="grid-button"><a href="#">Read More</a></button>
             </div>
             <div class="news-grid">
-              <div class="grid-image"><img src="./img/digital-minimalism.jpg" alt="digital minimalism"></div>
+              <div class="grid-image"><img src="./img/img-2.jpg" alt="digital minimalism"></div>
               <h1><a href="#">Digital minimalism</a></h1>
               <p>Whats digital minimalism?</p>
               <button class="grid-button"><a href="#">Read More</a></button>
             </div>
             <div class="news-grid">
-              <div class="grid-image"><img src="./img/Minimalist-interior-design.jpg" alt="minimalist interior design"></div>
+              <div class="grid-image"><img src="./img/img-3.jpg" alt="minimalist interior design"></div>
               <h1><a href="#">Minimalist interior design</a></h1>
               <p>Whats minimalist interior design?</p>
               <button class="grid-button"><a href="#">Read More</a></button>
             </div>
             <div class="news-grid">
-              <div class="grid-image"><img src="./img/Minimalist-lifestyle.jpg" alt="minimalist lifestyle"></div>
+              <div class="grid-image"><img src="./img/img-4.jpg" alt="minimalist lifestyle"></div>
               <h1><a href="#">Minimalist lifestyle</a></h1>
               <p>Whats minimalist lifestyle?</p>
               <button class="grid-button"><a href="#">Read More</a></button>
             </div>
             <div class="news-grid">
-              <div class="grid-image"><img src="./img/minimalist-code-wallpaper.jpg" alt="code wallpapers"></div>
+              <div class="grid-image"><img src="./img/img-5.jpg" alt="code wallpapers"></div>
               <h1><a href="#">Minimalist wallpapers</a></h1>
               <p>Whats Minimalist wallpapers?</p>
               <button class="grid-button"><a href="#">Read More</a></button>
             </div>
             <div class="news-grid">
-              <div class="grid-image"><img src="./img/minimalist-tattoo.jpg" alt="minimalist tattoo"></div>
+              <div class="grid-image"><img src="./img/img-6.jpg" alt="minimalist tattoo"></div>
               <h1><a href="#">Minimalist tattoos</a></h1>
               <p>Whats Minimalist tattoos?</p>
               <button class="grid-button"><a href="#">Read More</a></button>
             </div>
             <div class="news-grid">
-              <div class="grid-image"><img src="./img/30-Day-Minimalism-Challenge.jpg" alt="minimalist challenge"></div>
+              <div class="grid-image"><img src="./img/img-7.jpg" alt="minimalist challenge"></div>
               <h1><a href="#">30days Minimalist challenge</a></h1>
               <p>Whats Minimalist challenge?</p>
               <button class="grid-button"><a href="#">Read More</a></button>
             </div>
             <div class="news-grid">
-              <div class="grid-image"><img src="./img/minimalist-economy.jpg" alt="minimalist economy"></div>
+              <div class="grid-image"><img src="./img/img-8.jpg" alt="minimalist economy"></div>
               <h1><a href="#">Minimalist economy</a></h1>
               <p>Whats Minimalist economy?</p>
               <button class="grid-button"><a href="#">Read More</a></button>
