--- a/code/index.html
+++ b/code/index.html
@@ -10,7 +10,8 @@
     <!-- logo and navbar -->
     <nav class="nav-bar">
           <div class="container-logo">
-            <a href="#"><p class="site-logo">minimalism.</p>
+            <a href="#">
+              <img class="logo" src="./img/logo.png" alt="site logo">
             </a>
         </div>
         <ul class="nav-link" id="navi-list">
@@ -30,7 +31,7 @@
     <section class="headline">
         <div class="headline-image"><a href="#"><img src="./img/big-img-1.jpg" alt="minimalist wardrobe"></a></div>
         <article class="main-article">
-          <h1><a href="#">10 steps to the essential minimalist wardrobe</a></h1>
+          <h1><a href="#">FEATURED ARTICLE</a></h1>
           <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus fugit soluta odit fuga molestias, ab doloribus rem iure dolor ratione nam modi assumenda incidunt. Aperiam consequatur cupiditate fugit veniam voluptates? Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
               Delectus fugit soluta odit fuga molestias, ab doloribus rem iure dolor ratione nam modi assumenda incidunt. Aperiam consequatur cupiditate fugit veniam voluptates?
           </h3>
@@ -43,57 +44,57 @@
         <div class="container-grid">
             <div class="news-grid">
               <div class="grid-image"><img src="./img/img-1.jpg" alt="declutter"></div>
-              <h1><a href="#">Declutter</a></h1>
-              <p>Whats declutter?</p>
+              <h1><a href="#">Article #1</a></h1>
+              <p>Article about declutter</p>
               <button class="grid-button"><a href="#">Read More</a></button>
             </div>
             <div class="news-grid">
               <div class="grid-image"><img src="./img/img-2.jpg" alt="digital minimalism"></div>
-              <h1><a href="#">Digital minimalism</a></h1>
-              <p>Whats digital minimalism?</p>
+              <h1><a href="#">Article #2</a></h1>
+              <p>Article about digital minimalism</p>
               <button class="grid-button"><a href="#">Read More</a></button>
             </div>
             <div class="news-grid">
               <div class="grid-image"><img src="./img/img-3.jpg" alt="minimalist interior design"></div>
-              <h1><a href="#">Minimalist interior design</a></h1>
-              <p>Whats minimalist interior design?</p>
+              <h1><a href="#">Article #3</a></h1>
+              <p>Article about minimalist interior design</p>
               <button class="grid-button"><a href="#">Read More</a></button>
             </div>
             <div class="news-grid">
               <div class="grid-image"><img src="./img/img-4.jpg" alt="minimalist lifestyle"></div>
-              <h1><a href="#">Minimalist lifestyle</a></h1>
-              <p>Whats minimalist lifestyle?</p>
+              <h1><a href="#">Article #4</a></h1>
+              <p>Article about minimalist lifestyle</p>
               <button class="grid-button"><a href="#">Read More</a></button>
             </div>
             <div class="news-grid">
               <div class="grid-image"><img src="./img/img-5.jpg" alt="code wallpapers"></div>
-              <h1><a href="#">Minimalist wallpapers</a></h1>
-              <p>Whats Minimalist wallpapers?</p>
+              <h1><a href="#">Article #5</a></h1>
+              <p>Article about minimalist wallpapers</p>
               <button class="grid-button"><a href="#">Read More</a></button>
             </div>
             <div class="news-grid">
               <div class="grid-image"><img src="./img/img-6.jpg" alt="minimalist tattoo"></div>
-              <h1><a href="#">Minimalist tattoos</a></h1>
-              <p>Whats Minimalist tattoos?</p>
+              <h1><a href="#">Article #6</a></h1>
+              <p>Article about minimalist tattoos</p>
               <button class="grid-button"><a href="#">Read More</a></button>
             </div>
             <div class="news-grid">
               <div class="grid-image"><img src="./img/img-7.jpg" alt="minimalist challenge"></div>
-              <h1><a href="#">30days Minimalist challenge</a></h1>
-              <p>Whats Minimalist challenge?</p>
+              <h1><a href="#">Article #7</a></h1>
+              <p>Article about minimalist challenge</p>
               <button class="grid-button"><a href="#">Read More</a></button>
             </div>
             <div class="news-grid">
               <div class="grid-image"><img src="./img/img-8.jpg" alt="minimalist economy"></div>
-              <h1><a href="#">Minimalist economy</a></h1>
-              <p>Whats Minimalist economy?</p>
+              <h1><a href="#">Article #8</a></h1>
+              <p>Article about minimalist economy</p>
               <button class="grid-button"><a href="#">Read More</a></button>
             </div>
       </section>
         
       <!--footer-->
       <footer class="main-footer">
-          <h3>Copyright &copy 2022 <a href="mailto:sammyolsson@gmail.com">Sammy</a> @ <a href="www.technigo.io">Technigo</a> Boot Camp '23</h3>
+          <h3>Copyright &copy 2023 <a href="mailto:sammyolsson@gmail.com">Sammy</a>, <a href="www.technigo.io">Technigo</a> Boot Camp Student '23</h3>
       </footer>
 </body>
 
