Started project and added images.

--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,48 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <!-- Done - dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <section class="head-grid">
+      <div class="head-child logo">
+        <img src="./images/mug-icon.jpg" class="logo" alt="a black and white mug icon">
+      </div>
+      <div class="head-child title">
+        <h1>Cuppa News</h1>
+      </div>
+      <div class="head-child subtitle">
+        <h2>Anything you ever wanted to know about a hot cup of joe!</h2></div>
+      <div class="head-child search">
+        <input type="text" placeholder="Search">
+      </div>
+    </section>
     </header>
 
-    <section class="big-news">
+    <section class="big-news-fp">
       <!-- The big news content -->
+      <div class="big-news-fc">
+        <img src="./images/coffee.jpg" class="big-photo" alt="a cup of coffee with a shadow">
+        <p>Big News Story</p>
+        <button>Read More</button>
+      </div>
     </section>
 
-    <section class="">
+    <section class="other-grid">
       <!-- The other news  -->
+      <h3>The Rest of the News</h3>
+      <div class="other-child">☕️</div>
+      <div class="other-child">☕️</div>
+      <div class="other-child">☕️</div>
+      <div class="other-child">☕️</div>
     </section>
+    <footer>
+     <p>Contact Us</p>
+    </footer>
   </body>
 </html>
