Changed class name to eliminate double border

--- a/code/index.html
+++ b/code/index.html
@@ -11,7 +11,7 @@
     <header>
       <!-- Some kind of logo and navbar -->
       <section class="head-grid">
-      <div class="head-child logo">
+      <div class="head-child icon">
         <img src="./images/mug-icon.jpg" class="logo" alt="a black and white mug icon">
       </div>
       <div class="head-child title">
