html structure and css font-family added

--- a/code/index.html
+++ b/code/index.html
@@ -8,15 +8,155 @@
   </head>
   <body>
     <header>
+      <figure>
+        <img src="/code/logo.svg" alt="logotype" style="width: 30px" />
+      </figure>
       <!-- Some kind of logo and navbar -->
+      <nav>
+        <ul>
+          <li>About</li>
+          <li>Gadgets</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+    <main>
+      <section class="main-news">
+        <!-- The big main content -->
+        <div>
+          <img src="./assets/images/galaxy.jpg" alt="picture from space" />
+        </div>
+        <div>
+          <h2>Get Into Space</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Lectus
+            vestibulum mattis ullamcorper velit sed. Elementum curabitur vitae
+            nunc sed velit dignissim. Turpis nunc eget lorem dolor. Sed
+            adipiscing diam donec adipiscing tristique risus. Molestie nunc non
+            blandit massa enim nec. Elit at imperdiet dui accumsan sit amet
+            nulla facilisi morbi. Varius morbi enim nunc faucibus a pellentesque
+            sit. At quis risus sed vulputate odio ut enim blandit volutpat. Orci
+            dapibus ultrices in iaculis nunc sed augue lacus viverra. Sed
+            vulputate mi sit amet mauris. Nulla at volutpat diam ut venenatis
+            tellus in metus vulputate. Interdum varius sit amet mattis vulputate
+            enim nulla aliquet. Ullamcorper velit sed ullamcorper morbi
+            tincidunt ornare. Nisl suscipit adipiscing bibendum est ultricies
+            integer quis auctor. In tellus integer feugiat scelerisque. Cursus
+            euismod quis viverra nibh cras. Sed elementum tempus egestas sed
+            sed. Vitae sapien pellentesque habitant morbi tristique senectus.
+            Nec ultrices dui sapien eget mi proin.
+          </p>
+          <button>CALL TO ACTION</button>
+        </div>
+      </section>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
+      <section class="news-headlines">
+        <!-- The other news  -->
+        <div class="first-box box">
+          <h2>Space</h2>
+          <img
+            src="./assets/images/red-space-photo.jpg"
+            alt="Photo from space"
+          />
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat
+            maecenas volutpat blandit aliquam. Dignissim sodales ut eu sem.
+          </p>
+          <button>CALL TO ACTION</button>
+        </div>
+        <div class="second-box box">
+          <h2>Adventure</h2>
+          <img src="./assets/images/astronaut.jpg" alt="Astronaut in space" />
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat
+            maecenas volutpat blandit aliquam. Dignissim sodales ut eu sem.
+          </p>
+          <button>CALL TO ACTION</button>
+        </div>
+        <div class="third-box box">
+          <h2>The Moon</h2>
+          <img
+            src="./assets/images/moon-surface.jpg"
+            alt="Photo of the surfas of the moon"
+          />
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat
+            maecenas volutpat blandit aliquam. Dignissim sodales ut eu sem.
+          </p>
+          <button>CALL TO ACTION</button>
+        </div>
+        <div class="fouth-box box">
+          <h2>Earth</h2>
+          <img src="./assets/images/earth.jpg" alt="Photo of Earth" />
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat
+            maecenas volutpat blandit aliquam. Dignissim sodales ut eu sem.
+          </p>
+          <button>CALL TO ACTION</button>
+        </div>
+      </section>
+
+      <section class="fun-facts">
+        <div>
+          <img src="./assets/images/moon-trees.jpg" alt="space photo" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur. Vitae hendrerit diam augue
+            bibendum amet sed rhoncus lorem. Iaculis semper amet amet viverra
+            curabitur nullam gravida amet turpis. Euismod habitant scelerisque
+            nisl aliquet nunc orci. Libero mi enim purus pulvinar sed. Gravida
+            elit suspendisse in metus. Cursus nulla eu duis at senectus tempus
+            fringilla augue varius. Mauris erat in amet commodo libero. Blandit
+            venenatis hendrerit feugiat volutpat tincidunt mattis molestie neque
+            auctor. Dolor vitae turpis nunc quis et molestie interdum. Gravida
+            porttitor non consectetur est mi turpis nulla nibh. Purus nisi
+            aenean tempor viverra mi id justo quis. In quis aliquet convallis
+            mattis maecenas. Arcu hendrerit eleifend leo in sed lectus velit et.
+            Duis ultrices tempor nulla proin consectetur. Enim pellentesque
+            venenatis suspendisse et ultrices non. Pellentesque senectus enim
+            nec amet in. Sed vulputate volutpat nulla euismod. Eget purus
+            viverra quis placerat pretium. Consequat fusce tincidunt eros at
+            nullam nunc vitae consectetur pellentesque. Ultricies rhoncus
+            tincidunt tempus aliquam. Gravida sem vitae lobortis porttitor amet
+            proin maecenas sed urna. Cras malesuada amet viverra nunc. Nulla
+            ligula vivamus donec et quam sit sit. Auctor leo tortor pellentesque
+            pellentesque cras tristique pellentesque justo senectus.
+          </p>
+        </div>
+        <div>
+          <img src="./assets/images/space-photo.jpg" alt="space photo" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur. Vitae hendrerit diam augue
+            bibendum amet sed rhoncus lorem. Iaculis semper amet amet viverra
+            curabitur nullam gravida amet turpis. Euismod habitant scelerisque
+            nisl aliquet nunc orci. Libero mi enim purus pulvinar sed. Gravida
+            elit suspendisse in metus. Cursus nulla eu duis at senectus tempus
+            fringilla augue varius. Mauris erat in amet commodo libero. Blandit
+            venenatis hendrerit feugiat volutpat tincidunt mattis molestie neque
+            auctor. Dolor vitae turpis nunc quis et molestie interdum. Gravida
+            porttitor non consectetur est mi turpis nulla nibh. Purus nisi
+            aenean tempor viverra mi id justo quis. In quis aliquet convallis
+            mattis maecenas. Arcu hendrerit eleifend leo in sed lectus velit et.
+            Duis ultrices tempor nulla proin consectetur. Enim pellentesque
+            venenatis suspendisse et ultrices non. Pellentesque senectus enim
+            nec amet in. Sed vulputate volutpat nulla euismod. Eget purus
+            viverra quis placerat pretium. Consequat fusce tincidunt eros at
+            nullam nunc vitae consectetur pellentesque. Ultricies rhoncus
+            tincidunt tempus aliquam. Gravida sem vitae lobortis porttitor amet
+            proin maecenas sed urna. Cras malesuada amet viverra nunc. Nulla
+            ligula vivamus donec et quam sit sit. Auctor leo tortor pellentesque
+            pellentesque cras tristique pellentesque justo senectus.
+          </p>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <h3>Let Our Adventure Begin</h3>
+    </footer>
   </body>
 </html>
