--- a/code/index.html
+++ b/code/index.html
@@ -10,31 +10,36 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
-      <section class="head-grid">
-      <div class="head-child icon">
-        <img src="./images/mug-icon.jpg" class="logo" alt="a black and white mug icon">
-      </div>
-      <div class="head-child title">
+      <section class="header-parent">
+      <div class="header-child icon">
+        <img src="./images/mug-icon.jpg" class="icon-img" alt="a black and white mug icon">
+       </div>
+      <div class="header-child title">
         <h1>Cuppa News</h1>
+        <h2>Anything you ever wanted to know about a hot cup of joe!</h2>
       </div>
-      <div class="head-child subtitle">
-        <h2>Anything you ever wanted to know about a hot cup of joe!</h2></div>
-      <div class="head-child search">
+       <div class="header-child navbar">
+        <ul>
+          <li><a href="default.asp">Home</a></li>
+          <li><a href="about.asp">About</a></li>
+         </ul>
+      </div>
+      <div class="header-child search">
         <input type="text" placeholder="Search">
       </div>
     </section>
     </header>
 
-    <section class="big-news-fp">
+    <section class="big-news">
       <!-- The big news content -->
-      <div class="big-news-fc">
+        <h3>The Big News Story</h3>
         <img src="./images/coffee.jpg" class="big-photo" alt="a cup of coffee with a shadow">
-        <p>Big News Story</p>
+        <p>The Story: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at ex lobortis, interdum elit ut, rhoncus eros. Mauris et nisl venenatis nisl fringilla lobortis. Mauris at est pulvinar, pellentesque arcu eu, lacinia enim. Integer non tincidunt ipsum, ut fringilla nunc. Phasellus blandit, dolor et pulvinar laoreet, lacus neque dapibus ante, non efficitur orci massa quis odio. Morbi finibus elementum ligula in dictum. Vestibulum nec iaculis lorem. In aliquet lectus nec vestibulum imperdiet. Suspendisse potenti.
+        </p>
         <button>Read More</button>
-      </div>
-    </section>
+     </section>
 
-    <section class="other-grid">
+    <section class="other-news">
       <!-- The other news  -->
       <h3>The Rest of the News</h3>
       <div class="other-child">☕️</div>
