Changed header fonts, colors, and logo

--- a/code/index.html
+++ b/code/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The News Site: Cuppa News</title>
     <link rel="stylesheet" href="./style.css" />
+    <link href='https://fonts.googleapis.com/css?family=Amita' rel='stylesheet'>
     <!-- Done - dont forget the meta tag for responsiveness -->
   </head>
   <body>
@@ -12,7 +13,7 @@
       <!-- Some kind of logo and navbar -->
       <section class="header-parent">
       <div class="header-child icon">
-        <img src="./images/mug-icon.jpg" class="icon-img" alt="a black and white mug icon">
+        <img src="./images/cartoon-mug.jpg" class="icon-img" alt="a black and white mug icon">
        </div>
       <div class="header-child title">
         <h1>Cuppa News</h1>
