--- a/code/index.html
+++ b/code/index.html
@@ -48,8 +48,10 @@
     <!-- The big news content -->
     <section class="big-news">
       <div class="big-news-box">
-        <h2 class="big-news-title">Chemistry Nobel awarded for mirror-image molecules</h2>
-        <!-- <img class="big-news-image" "https://images.unsplash.com/photo-1576086213369-97a306d36557?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80"/> -->
+        <a target="_blank" href="https://www.bbc.com/news/science-environment-63121338">
+          <h2 class="big-news-title">Three scientists win Nobel for chemistry 'Lego'</h2>
+          <img class="big-news-image" src="https://images.unsplash.com/photo-1567607703202-0bf728b59e09?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80"/>
+        </a>
       </div>
     </section>
 
@@ -60,25 +62,29 @@
         <div class="news-item">
           <a target="_blank" href="https://www.bbc.com/news/world-asia-china-64102176"> 
             <img class="news-item-image" src="https://images.unsplash.com/photo-1483450388369-9ed95738483c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"/>
-            <h3 class="news-item-caption">Covid in China: People rush to book travel as borders finally reopen</h3>
+            <h3 class="news-item-caption">People rush to book travel as borders finally reopen</h3>
+            <h3 class="news-item-text">Chinese people have rushed to book overseas travel after Beijing announced it would reopen its borders next month.</h3>
           </a>
         </div>
         <div class="news-item">
           <a target="_blank" href="https://www.bbc.com/news/world-europe-63967017">
             <img class="news-item-image" src="https://images.unsplash.com/photo-1646227163793-7aae7155d5bd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"/>
             <h3 class="news-item-caption">Explosions in central Kyiv amid air raid warning</h3>
+            <h3 class="news-item-text">Ukrainian officials say they shot down over a dozen drones during a Russian attack on the capital city of Kyiv early on Wednesday morning.</h3>
           </a>  
         </div>
         <div class="news-item">
           <a target ="_blank" href="https://www.bbc.com/news/science-environment-54420240">
             <img class="news-item-image" src="https://images.unsplash.com/photo-1597449031666-21da12583121?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"/>
             <h3 class="news-item-caption">Black hole breakthroughs win Nobel physics prize</h3>
+            <h3 class="news-item-text">Three scientists have been awarded the 2020 Nobel Prize in Physics for work to understand black holes.</h3>
           </a>
         </div>
         <div class="news-item">
           <a target ="_blank" href="https://www.bbc.com/news/world-asia-64065206">
             <img class="news-item-image" src="https://images.unsplash.com/photo-1629626752470-a5fbbcfdc45a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"/>
             <h3 class="news-item-caption">Taliban arrest women protesting against university ban</h3>
+            <h3 class="news-item-text">The Taliban have arrested five women taking part in a protest in the Afghan capital, Kabul, against the ban on women attending universities.</h3>
           </a>
         </div>  
          
@@ -92,24 +98,28 @@
           <a target="_blank" href="https://www.bbc.com/sport/sports-personality/64027088">
             <img class="news-item-image" src="https://images.unsplash.com/photo-1671016233730-44258a88eb03?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1133&q=80">
             <h3 class="news-item-caption">Lionel Messi named BBC World Sport Star of the Year</h3>
+            <h3 class="news-item-text">Argentina's World Cup-winning captain Lionel Messi has been named BBC Sports Personality's World Sport Star of the Year for 2022.</h3>
           </a>
         </div>
         <div class="news-item">
-          <a target="_blank" href="https://www.bbc.com/sport/tennis/63018231"></a>
+          <a target="_blank" href="https://www.bbc.com/sport/tennis/63018231">
             <img class="news-item-image" src="https://images.unsplash.com/photo-1544298621-a28c00544483?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cm9nZXIlMjBmZWRlcmVyfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60">
             <h3 class="news-item-caption">Federer hopes to 'party again' after retirement</h3>
+            <h3 class="news-item-text">Roger Federer hopes he "can party together" in the future with his legions of fans across the world after retiring from professional tennis.</h3>
           </a>
         </div>
         <div class="news-item">
           <a target="_blank" href="https://www.bbc.com/sport/cricket/64016092">
             <img class="news-item-image" src="https://images.unsplash.com/photo-1624526267942-ab0ff8a3e972?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80">
             <h3 class="news-item-caption">Pakistan v England: Rehan Ahmed is the real deal</h3>
+            <h3 class="news-item-text">Rehan Ahmed's performance in taking 5-48 on the third day of England's final Test against Pakistan was remarkable.</h3>
           </a>
         </div>
         <div class="news-item">
           <a target="_blank" href="https://www.bbc.com/sport/63987137">
             <img class="news-item-image" src="https://images.unsplash.com/photo-1551698618-1dfe5d97d256?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80">
             <h3 class="news-item-caption">UN urges sports organisations to do more for sustainability</h3>
+            <h3 class="news-item-text">The United Nations is calling on sports organisations across the world to do more for sustainability.</h3>
           </a>
       </section>
 
@@ -119,25 +129,30 @@
         <div class="news-item">
           <a target ="_blank" href="https://www.bbc.com/news/business-64099654">
             <img class="news-item-image" src="https://images.unsplash.com/photo-1581092795360-fd1ca04f0952?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"/>
+            
             <h3 class="news-item-caption">Apple and Tesla: Tech shares tumble amid supply issues</h3>
+            <h3 class="news-item-text">Apple and Tesla stocks have tumbled over growing concerns about delays in their production lines in China.</h3>
           </a>
         </div>
         <div class="news-item">
           <a target ="_blank" href="https://www.bbc.com/news/business-63130593">
             <img class="news-item-image" src="https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80"/>
             <h3 class="news-item-caption">Tech trends 2023: Flying taxis and satellite phones</h3>
+            <h3 class="news-item-text">At 1:03am on Monday 5 December, the most powerful laser on the planet flashed into life at the Lawrence Livermore National Laboratory (LLNL) in California, in an experiment that sent shockwaves through the world of physics and beyond.</h3>
           </a>
         </div>
         <div class="news-item">
           <a target ="_blank" href="https://www.bbc.com/news/technology-64003237">
             <img class="news-item-image" src="https://images.unsplash.com/photo-1584905066893-7d5c142ba4e1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"/>
             <h3 class="news-item-caption">Netflix password sharing may be illegal, says UK government</h3>
+            <h3 class="news-item-text">Sharing passwords for online streaming services such as Netflix is against the law, according to a government agency.</h3>
           </a>
         </div>
         <div class="news-item">
           <a target ="_blank" href="https://www.bbc.com/news/technology-64075067">
             <img class="news-item-image" src="https://images.unsplash.com/photo-1636114673156-052a83459fc1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"/>
             <h3 class="news-item-caption">Meta settles Cambridge Analytica scandal case for $725m</h3>
+            <h3 class="news-item-text">Facebook owner Meta has agreed to pay $725m (£600m) to settle legal action over a data breach linked to political consultancy Cambridge Analytica.</h3>
           </a>
         </div>  
       </section>
