--- a/code/index.html
+++ b/code/index.html
@@ -4,19 +4,102 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arimo&family=Literata:opsz,wght@7..72,500&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
+      <nav>
+      <h1>Daily Mews</h1>
       <!-- Some kind of logo and navbar -->
+        <li>
+        <ul>news</ul>
+        <ul>editorial</ul>
+        <ul>lifestyle</ul>
+        <ul>culture</ul>
+      </li>
+    </nav>
     </header>
 
     <section class="big-news">
-      <!-- The big news content -->
+      <div class="articleimg">
+      <img src="https://vioszabo.se/nappin200px.jpg" alt="cat looking up from an empty bowl">
+      <div class="text-wrapper">
+      <h2>Bowls still empty</h2>
+      <p>No estimate on when refill might be expected, sources say</p>
+        </div>
+      </div>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="grid-container">
+      <div class="news-item item1">
+        <div class="articleimg">
+        <img src="https://vioszabo.se/nappin200px.jpg">
+        <div class="text-wrapper"><h2>Cat union formed</h2>
+        <p>“We work hard as cats, knocking over plants and napping. We demand fair compensation” chaircat Popcorn says. "Absurd claims" according to humans</p>
+      </div>
+    </div>
+      </div>
+      <div class="news-item item2">
+        <div class="articleimg">
+        <img src="https://vioszabo.se/nappin200px.jpg">
+        <div class="text-wrapper">
+          <h2>Birds, why do they even exist?</h2>
+        <p>They are annoying, let's hunt them.</p>
+      </div>
+    </div>
+    </div>
+      <div class="news-item item3">
+        <div class="articleimg">
+        <img src="https://vioszabo.se/nappin200px.jpg">
+        <div class="text-wrapper">
+          <h2>New trend: waking up at 3 for more nap time during the day</h2>
+          <p>Don't miss out on your nap times!</p>
+        </div>
+      </div>
+      </div>  
+      <div class="news-item item4">
+        <div class="articleimg">
+        <img src="https://vioszabo.se/nappin200px.jpg">
+        <div class="text-wrapper">
+          <h2>Ignore expensive toys - play with trash instead!</h2>
+          <p>Those humans have no idea what we like, do they.</p>
+        </div>
+      </div>
+      </div>
+      <div class="news-item item5">
+        <div class="articleimg">
+        <img src="https://vioszabo.se/nappin200px.jpg">
+        <div class="text-wrapper">
+          <h2>Study shows most cats avoid the vet</h2>
+      </div>
+    </div>
+    </div>
+    <div class="news-item item6">
+      <div class="articleimg">
+      <img src="https://vioszabo.se/nappin200px.jpg">
+      <div class="text-wrapper">
+        <h2>Cat tv: squirrel feeder does not dissapoint</h2>
+    </div>
+  </div>
+  </div>
+  <div class="news-item item7">
+    <div class="articleimg">
+    <img src="https://vioszabo.se/nappin200px.jpg">
+    <div class="text-wrapper">
+      <h2>Weather forecast: bad</h2>
+  </div>
+</div>
+</div>
+<div class="news-item item8">
+  <div class="articleimg">
+  <img src="https://vioszabo.se/nappin200px.jpg">
+  <div class="text-wrapper">
+    <h2>Latest cardboard box review</h2>
+</div>
+</div>
+</div>
     </section>
   </body>
 </html>
