--- a/code/index.html
+++ b/code/index.html
@@ -5,12 +5,26 @@
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
+    <meta name = “viewport” content = “width=device-width, initial-scale=1.0”>
   </head>
-  <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <div class="navbar">
+        <nav>
+          <section class="flex-parent">
+            <img class="flex-child-image"src="./chocolate-logo.jpg" alt="Chocolate-logo">
+            <h1 class = "flex-child-logo-title">The Chocolate Post</h1>
+          </section>
+          <ul class = "list">
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">News</a></li>
+          </ul>
+          <a class ="cta" href="#"><button>Contact</button></a>
+        </nav>
+      </div>    
     </header>
-
+    <body>
     <section class="big-news">
       <!-- The big news content -->
     </section>
