--- a/code/index.html
+++ b/code/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <nav class="navbar">
-        <img class="logo-image" src="s-logo.jpg"/>
+        <!-- <img class="logo-image" src="s-logo.jpg"/> -->
         <div class="logo">
           Stockholm
           <br>
@@ -138,7 +138,7 @@
           <a target ="_blank" href="https://www.bbc.com/news/business-63130593">
             <img class="news-item-image" src="https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80"/>
             <h3 class="news-item-caption">Tech trends 2023: Flying taxis and satellite phones</h3>
-            <h3 class="news-item-text">At 1:03am on Monday 5 December, the most powerful laser on the planet flashed into life at the Lawrence Livermore National Laboratory (LLNL) in California, in an experiment that sent shockwaves through the world of physics and beyond.</h3>
+            <h3 class="news-item-text">At 1:03am on Monday 5 December, the most powerful laser on the planet flashed into life at the Lawrence Livermore National Laboratory (LLNL) in California.</h3>
           </a>
         </div>
         <div class="news-item">
